# inhouse-prompt-eng-rag

./: .gitignore  README.md  api.py  app.py  pyproject.toml  requirements.txt
chat_agent/: basic_llm.py  llm_retrieval.py  rag_with_vertex.py
common/: chat_models.py  eval_models.py
evaluation/: ragas_evaluator.py
process/: manual_rag.py
